--- a/main.ui
+++ b/main.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1050</width>
+    <width>1047</width>
     <height>814</height>
    </rect>
   </property>
@@ -68,8 +68,8 @@
   <widget class="QPushButton" name="btn_search">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>470</y>
+     <x>410</x>
+     <y>60</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -81,8 +81,8 @@
   <widget class="QPushButton" name="btn_viewlog">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>470</y>
+     <x>550</x>
+     <y>60</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -94,8 +94,8 @@
   <widget class="QPushButton" name="btn_recover">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>470</y>
+     <x>690</x>
+     <y>60</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -107,8 +107,8 @@
   <widget class="QPushButton" name="btn_save">
    <property name="geometry">
     <rect>
-     <x>420</x>
-     <y>470</y>
+     <x>820</x>
+     <y>60</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -133,11 +133,14 @@
   <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>530</y>
-     <width>1051</width>
-     <height>251</height>
+     <x>10</x>
+     <y>500</y>
+     <width>601</width>
+     <height>301</height>
     </rect>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::ClickFocus</enum>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -185,14 +188,14 @@
      <x>0</x>
      <y>100</y>
      <width>1051</width>
-     <height>331</height>
+     <height>391</height>
     </rect>
    </property>
    <property name="focusPolicy">
     <enum>Qt::ClickFocus</enum>
    </property>
    <property name="contextMenuPolicy">
-    <enum>Qt::DefaultContextMenu</enum>
+    <enum>Qt::NoContextMenu</enum>
    </property>
    <property name="statusTip">
     <string notr="true"/>
@@ -210,7 +213,7 @@
     <bool>true</bool>
    </property>
    <property name="selectionMode">
-    <enum>QAbstractItemView::ExtendedSelection</enum>
+    <enum>QAbstractItemView::ContiguousSelection</enum>
    </property>
    <property name="selectionBehavior">
     <enum>QAbstractItemView::SelectRows</enum>
@@ -233,17 +236,26 @@
    <property name="rowCount">
     <number>0</number>
    </property>
+   <property name="columnCount">
+    <number>7</number>
+   </property>
    <attribute name="horizontalHeaderVisible">
     <bool>true</bool>
    </attribute>
    <attribute name="horizontalHeaderDefaultSectionSize">
     <number>100</number>
    </attribute>
+   <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+    <bool>true</bool>
+   </attribute>
    <attribute name="verticalHeaderVisible">
     <bool>true</bool>
    </attribute>
    <attribute name="verticalHeaderDefaultSectionSize">
     <number>18</number>
+   </attribute>
+   <attribute name="verticalHeaderHighlightSections">
+    <bool>false</bool>
    </attribute>
    <attribute name="verticalHeaderShowSortIndicator" stdset="0">
     <bool>false</bool>
@@ -296,6 +308,17 @@
      <set>AlignLeading|AlignVCenter</set>
     </property>
    </column>
+   <column/>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_2">
+   <property name="geometry">
+    <rect>
+     <x>620</x>
+     <y>500</y>
+     <width>411</width>
+     <height>301</height>
+    </rect>
+   </property>
   </widget>
   <action name="actionMenubar">
    <property name="text">
